fix opennav overwriting by z-index, slider and couple other issues

--- a/src/styles/bem-blocks/_message-us.scss
+++ b/src/styles/bem-blocks/_message-us.scss
@@ -62,5 +62,6 @@
   &__send {
     @include page-button;
     font-size: 15px;
+    cursor: pointer;
   }
 }
