--- a/src/styles/bem-blocks/_navigation.scss
+++ b/src/styles/bem-blocks/_navigation.scss
@@ -1,6 +1,7 @@
 .navigation {
   height: 100vh;
   padding-inline: 20px;
+  z-index: 2;
   padding-top: 18px;
   position: absolute;
   background-color: #2c2c2c;
