--- a/src/styles/bem-blocks/_services.scss
+++ b/src/styles/bem-blocks/_services.scss
@@ -58,7 +58,11 @@
     flex-direction: column;
     max-height: 264px;
 
+    width: 280px;
+    @include centered;
+
     @include onTablet {
+      width: 264px;
       &--lower-card {
         grid-column: 1 / 4;
       }
