--- a/src/styles/bem-blocks/_slider.scss
+++ b/src/styles/bem-blocks/_slider.scss
@@ -1,3 +1,11 @@
+.a {
+  background-image: url(../images/slider/slideImg1.jpg);
+}
+
+.b {
+  background-image: url(../images/slider/slideImg3.jpg);
+}
+
 .slider {
   position: static;
   width: 100%;
@@ -21,20 +29,12 @@
 
   @include onDesktop-s {
     position: absolute;
-    width: 502px;
+    width: 50%;
     height: 687px;
     top: 120px;
     right: 0;
     border-top-right-radius: 0;
     border-bottom-left-radius: 0;
-  }
-
-  @include onDesktop-m {
-    width: 687px;
-  }
-
-  @include onDesktop-l {
-    width: 1167px;
   }
 
   &__bottom {
@@ -107,6 +107,6 @@
 }
 
 #slider {
-  @include transition;
+  transition: 0.5s;
   background-image: url(../images/slider/slideImg2.jpg);
 }
